# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "pdk_basic_logging_filter"
version = "1.0.0"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "a679f308-ca49-4f47-850e-b7fc0b2825bb"
definition_asset_id = "pdk-basic-logging-filter"
implementation_asset_id = "pdk-basic-logging-filter-flex"

[dependencies]
pdk = { version = "1.2.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.2.0", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
